# pruebasFastapi

./: .gitignore  Pipfile  Procfile  __init__.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  schemas.py  services.py  utils.py
alembic/versions/: 63253ed36cc8_create_movies.py  89db350023ed_add_banner_to_movies.py  cb7bbb5f4da1_create_movies_relations.py
common/: __init__.py  common_exceptions.py
database/: __init__.py  database.py
movies/: __init__.py  models.py  schemas.py  services.py
movies_user/: __init__.py  schemas.py  services.py
routes/: movies.py  movies_user.py  users.py
tests/: test_movies.py
users/: __init__.py  main.py  models.py  schemas.py  services.py
